--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ var SiteParameters = {"days":"days","hours":"hours","minutes":"minutes","seconds
 																<div class="row-menu-inner">
 																	<div id="logo-container-mobile" class="col-lg-0 logo-container middle">
 																		<div id="main-logo" class="navbar-header style-light">
-																			<a href="https://undsgn.com/uncode/" class="navbar-brand" data-padding-shrink="27" data-minheight="20"><div class="html-code main-logo logo-skinnable" data-maxheight="22" style="height: 22px;"><canvas class="logo-canvas" height="22" width="67"></canvas><?xml version="1.0" encoding="utf-8"?>
+																			<a href="https://website.moxrathore.com" class="navbar-brand" data-padding-shrink="27" data-minheight="20"><div class="html-code main-logo logo-skinnable" data-maxheight="22" style="height: 22px;"><canvas class="logo-canvas" height="22" width="67"></canvas><?xml version="1.0" encoding="utf-8"?>
 <!-- Generator: Adobe Illustrator 25.3.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
 <svg preserveaspectratio="xMinYMin" version="1.1" id="Layer_1-1365374638" x="0px" y="0px" viewbox="0 0 119.3 39.1" style="enable-background:new 0 0 119.3 39.1;" xml:space="preserve">
 <g>
